...
            "value": "닫기"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "閉じる"
...
            "value": "첫 자산을 등록해 보세요"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Capture your first item"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "最初の資産を登録してください"
...
            "value": "라이브러리"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ライブラリ"
...
